--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
         <option value="Default Shorting">Default Shorting</option>
         <option value="Short by price ">Short by price </option>
         <option value="Short by popularity">Short by popularity</option>
-        <option value="Short by rating">Short by rating</option>
+        <option value="Short by rating">Short by rating</option> 
     </select>
 </div>
 <div class="feature-product">
@@ -49,8 +49,8 @@
 
 
     <div class="small-cont">
-        <img src="./images/product-1.jpg" alt=""> <br>
-        <h4>Red printed T-shirt</h4>
+        <a href="product-details.html" ><img src="./images/product-1.jpg" alt=""><br>
+        <h4>Red printed T-shirt</h4></a> 
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
