--- a/Cart.html
+++ b/Cart.html
@@ -19,12 +19,12 @@
     
 
     <nav >
-        <ul><li><a href="index.html">Home</a></li>
+        <ul>
+            <li><a href="index.html">Home</a></li>
             <li>About</li>
-             <li><a href="products.html">Products</a></li>
-              <li>Account</li>
-              <img  class="cart" src="./images/cart.png" alt="cart">
-             
+             <li><a href="products.html" >Products </a></li>
+              <li><a href="Account.html"> Account</li></a>
+             <a href="Cart.html"> <img  class="cart" src="./images/cart.png" alt="cart"></a>
         </ul>
     </nav>
 </div>
