--- a/AccountReg.html
+++ b/AccountReg.html
@@ -55,18 +55,20 @@
     <div class="div">
         <div class="form-container">
             <div class="form-btn">
-                <Span>Login</Span>
+                <span  >Register</span>
                 <hr id="Indicator">
             </div>
                 
-            <form id="LoginForm" >
-                <input type="text" placeholder="Username" maxlength="12">
-                <input type="password" placeholder="password" maxlength="8">
-                <button type="submit" class="btn">Login</button><br>
-                <a href="AccountReg.html">Forgot password</a>
+          
+
+
+            <form id="RegForm" >
+                <input type="text" placeholder="Username">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="password" >
+                <button type="submit" class="btn">Register</button> <br>
+                <h5>Already Register!  <a href="Account.html">Login</a></h5>
             </form>
-
-
 
 
         </div>
@@ -96,26 +98,6 @@
 
 
 </div>
-<!--<script>
-  var LoginForm = document.getElementById("LoginForm");
-  var LoginForm = document.getElementById("RegForm");
-  var indicator = document.getElementById("Indicator");
-
-
-function register(){
-  RegForm.style.transform= "translateX(0px)"  
-  LoginForm.style.transform= "translateX(0px)"  
-  indicator.style.transform= "translateX(100px)"  
-}
-
-function login(){
-  RegForm.style.transform= "translateX(300px)"  
-  LoginForm.style.transform= "translateX(300px)"  
-  indicator.style.transform= "translateX(0px)"  
-}
-
-
-</script>-->
 
 
 
