--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     </div>
     
 
-    <nav >
+    <nav class="navtitle" >
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
-             <li><a href="products.html" >Products </a></li>
-              <li><a href="Account.html"> Account</li></a>
-             <a href="Cart.html"> <img  class="cart" src="./images/cart.png" alt="cart"></a>
+            <li><a href="About.html" >About</a></li>
+             <li><a href="products.html" >Products <i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li>
+            <!--<li> <a href="Cart.html"> <i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li> -->
+             <li><a href="Account.html" id="userlogo"> <i class="fa fa-user-circle" aria-hidden="true"></i></a></li>
         </ul>
     </nav>
 </div>
@@ -58,7 +58,7 @@
 
     <div class="small-cont">
         <img src="./images/product-1.jpg" alt=""> <br>
-        <h4?>Red printed T-shirt</h4>
+        <h4>Red printed T-shirt</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -71,7 +71,7 @@
 
     <div class="small-cont">
         <img src="./images/product-2.jpg" alt=""> <br>
-        <h4?>HRx Sports shoesKKKKKT</h4>
+        <h4>HRx Sports shoes</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -83,7 +83,7 @@
     </div>
     <div class="small-cont">
         <img src="./images/product-3.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4> Fashion Shorts</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -93,9 +93,13 @@
         </div>
         <p>$120.00</p>
     </div>
+
+
+
+
     <div class="small-cont">
         <img src="./images/product-4.jpg" alt=""> <br>
-        <h4>darkbule printed T-shirt</h4>
+        <h4>darkbule  T-shirt</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -103,7 +107,7 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$90.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  90.00</p>
     </div>
 <br>
 
@@ -112,7 +116,7 @@
 <div class="latest-product">
  <div class="small-contain">
         <img src="./images/product-5.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4> Fashion Shorts</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -120,14 +124,14 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  120.00</p>
     </div>
    
 
 
     <div class="small-contain">
         <img src="./images/product-6.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4> Fashion Shorts</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -135,12 +139,12 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  120.00</p>
     </div>
    
     <div class="small-contain">
         <img src="./images/product-7.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4> Fashion Shorts</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -148,7 +152,7 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  120.00</p>
     </div>
    
 
@@ -156,7 +160,7 @@
 
     <div class="small-contain">
         <img src="./images/product-8.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4> Fashion Shorts</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -164,14 +168,14 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  120.00</p>
     </div> <br>
     <br>
    
 
     <div class="small-contain">
         <img src="./images/product-9.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4> Fashion Shorts</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -179,13 +183,13 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  120.00</p>
     </div>
 
 
     <div class="small-contain">
         <img src="./images/product-10.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4> Fashion Shorts</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -193,14 +197,14 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  120.00</p>
     </div>
 
 
 
     <div class="small-contain">
         <img src="./images/product-11.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4> Fashion Shorts</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -208,7 +212,7 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  120.00</p>
     </div>
 
 
@@ -219,7 +223,7 @@
     
     <div class="small-contain">
         <img src="./images/product-12.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4> Fashion Shorts</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -227,7 +231,7 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  120.00</p>
     </div>
 
 </div>
@@ -240,7 +244,7 @@
     </div>
     <div class="smartbrand">
         <p>exclusively Available on Redstore</p>
-        <h1>Smart Brand 4</h1>
+        <h1 class="smrt-brand-head">Smart Brand 4</h1>
         <small>The Mi Smart Brand 4 Feature a 39.9% larger (than Mi Brand 3) AMOLED color  full-touch display with adjustable brightness, so everthing  is clear as can be. </small> <br> <br>
         <a class="btn1" href="#">Buy Now &#10141;</a>
     </div>
