--- a/products.html
+++ b/products.html
@@ -21,10 +21,10 @@
     <nav >
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
-             <li><a href="products.html" >Products </a></li>
-              <li><a href="Account.html"> Account</li></a>
-             <a href="Cart.html"> <img  class="cart" src="./images/cart.png" alt="cart"></a>
+            <li><a href="About.html" >About</a></li>
+             <li><a href="products.html" >Products<i class="fa fa-shopping-bag" aria-hidden="true"></i> </a></li>
+             <!--<li> <a href="Cart.html"> <i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li> -->
+             <li><a href="Account.html" id="userlogo"> <i class="fa fa-user-circle" aria-hidden="true"></i></a></li>
         </ul>
     </nav>
 </div>
@@ -58,7 +58,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$50.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 360.00</p>
+        <button class="add-to-cart" data-product="Red Printed T-shirt" data-price="360.00">Add to Cart</button>
     </div>
 
     <div class="small-cont">
@@ -71,7 +72,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$70.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 576/-</p>
+        <button class="add-to-cart" data-product="HRx sports shoes" data-price="576.00">Add to Cart</button>
     </div>
     <div class="small-cont">
         <img src="./images/product-3.jpg" alt=""> <br>
@@ -83,11 +85,12 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 436/-</p>
+        <button class="add-to-cart" data-product="Fashion shorts" data-price="436/-">Add to Cart</button>
     </div>
     <div class="small-cont">
         <img src="./images/product-4.jpg" alt=""> <br>
-        <h4>darkbule printed T-shirt</h4>
+        <h4>darkbule T-shirt</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -95,13 +98,14 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$90.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 394/-</p>
+        <button class="add-to-cart" data-product="darkbule printed T-shirt" data-price="394.00">Add to Cart</button>
     </div>
 
 <div class="latest-product">
  <div class="small-contain">
         <img src="./images/product-5.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4?> V-sports Shoes</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -109,14 +113,15 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 588/-</p>
+        <button class="add-to-cart" data-product="" data-price="588.00">Add to Cart</button>
     </div>
    
 
 
     <div class="small-contain">
         <img src="./images/product-6.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4?> blackpuma T-shirt</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -124,12 +129,13 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 890.00</p>
+        <button class="add-to-cart" data-product="Product 3" data-price="890.00">Add to Cart</button>
     </div>
    
     <div class="small-contain">
         <img src="./images/product-7.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4?>HRx scokscarving</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -137,7 +143,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 189.00</p>
+        <button class="add-to-cart" data-product="Product 3" data-price="189.00">Add to Cart</button>
     </div>
    
 
@@ -145,7 +152,7 @@
 
     <div class="small-contain">
         <img src="./images/product-8.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4?> Fossil metal watch</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -153,14 +160,15 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 1289.00</p>
+        <button class="add-to-cart" data-product="Product 3" data-price="1289.00">Add to Cart</button>
     </div> <br>
     <br>
    
 
     <div class="small-contain">
         <img src="./images/product-9.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4?> Redmuster fashion watch</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -168,13 +176,14 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 877.00</p>
+        <button class="add-to-cart" data-product="Product 3" data-price="877.00">Add to Cart</button>
     </div>
 
 
     <div class="small-contain">
         <img src="./images/product-10.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4?> X-sprak shoes</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -182,14 +191,15 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  769.00</p>
+        <button class="add-to-cart" data-product="Product 3" data-price="769.00">Add to Cart</button>
     </div>
 
 
 
     <div class="small-contain">
         <img src="./images/product-11.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4?> Fashion cut shoes</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -197,7 +207,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  220.00</p>
+        <button class="add-to-cart" data-product="Product 3" data-price="220.00">Add to Cart</button>
     </div>
 
 
@@ -208,7 +219,7 @@
     
     <div class="small-contain">
         <img src="./images/product-12.jpg" alt=""> <br>
-        <h4?> Fashion Shorts</h4>
+        <h4?> vikto Fashion shorts</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -216,11 +227,12 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  568.00</p> 
+        <button class="add-to-cart" data-product="Product 3" data-price="568.00">Add to Cart</button>
     </div>
 
 </div>
-
+<br>
 <div class="page-btn">
     <span>1</span>
     <span>2</span>
@@ -230,6 +242,19 @@
     
 
 </div>
+
+
+
+
+<div id="cart">
+    <h3>Your Cart <i class="fa fa-shopping-cart" aria-hidden="true"></i></h3>
+    <ul id="cart-items"></ul>
+    <p>Total: <i class="fa fa-inr" aria-hidden="true"></i> <span id="total-price">0.00</span></p>
+    <button id="clear-cart">Clear Cart</button>
+  </div>
+
+
+
 
 
 <br>
@@ -280,6 +305,6 @@
 
 
 
-
+<script src="script.js"></script>
 </body>
 </html>
