--- a/product-details.html
+++ b/product-details.html
@@ -23,8 +23,8 @@
             <li><a href="index.html">Home</a></li>
             <li>About</li>
              <li><a href="products.html" >Products </a></li>
-              <li><a href="Account.html"> Account</li></a>
-             <a href="Cart.html"> <img  class="cart" src="./images/cart.png" alt="cart"></a>
+             <!--<li> <a href="Cart.html"> <i class="fa fa-shopping-bag" aria-hidden="true"></i></a></li> -->
+             <li><a href="Account.html" id="userlogo"> <i class="fa fa-user-circle" aria-hidden="true"></i></a></li>
         </ul>
     </nav>
 </div>
