--- a/products.html
+++ b/products.html
@@ -58,8 +58,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p><i class="fa fa-inr" aria-hidden="true"></i> 360.00</p>
-        <button class="add-to-cart" data-product="Red Printed T-shirt" data-price="360.00">Add to Cart</button>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 360/-</p>
+        <button class="add-to-cart" data-product="Red Printed T-shirt" data-price="360/-">Add to Cart</button>
     </div>
 
     <div class="small-cont">
@@ -73,7 +73,7 @@
             <i class="fa fa-star-o"></i>
         </div>
         <p><i class="fa fa-inr" aria-hidden="true"></i> 576/-</p>
-        <button class="add-to-cart" data-product="HRx sports shoes" data-price="576.00">Add to Cart</button>
+        <button class="add-to-cart" data-product="HRx sports shoes" data-price="576/-">Add to Cart</button>
     </div>
     <div class="small-cont">
         <img src="./images/product-3.jpg" alt=""> <br>
@@ -99,7 +99,7 @@
             <i class="fa fa-star-o"></i>
         </div>
         <p><i class="fa fa-inr" aria-hidden="true"></i> 394/-</p>
-        <button class="add-to-cart" data-product="darkbule printed T-shirt" data-price="394.00">Add to Cart</button>
+        <button class="add-to-cart" data-product="darkbule printed T-shirt" data-price="394/-">Add to Cart</button>
     </div>
 
 <div class="latest-product">
@@ -114,14 +114,14 @@
             <i class="fa fa-star-o"></i>
         </div>
         <p><i class="fa fa-inr" aria-hidden="true"></i> 588/-</p>
-        <button class="add-to-cart" data-product="" data-price="588.00">Add to Cart</button>
+        <button class="add-to-cart" data-product="V-sports shoes" data-price="588/-">Add to Cart</button>
     </div>
    
 
 
     <div class="small-contain">
         <img src="./images/product-6.jpg" alt=""> <br>
-        <h4?> blackpuma T-shirt</h4>
+        <h4?> Blackpuma T-shirt</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -129,8 +129,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p><i class="fa fa-inr" aria-hidden="true"></i> 890.00</p>
-        <button class="add-to-cart" data-product="Product 3" data-price="890.00">Add to Cart</button>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 890/-</p>
+        <button class="add-to-cart" data-product="Blackpuma T-shirt" data-price="890/-">Add to Cart</button>
     </div>
    
     <div class="small-contain">
@@ -143,8 +143,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p><i class="fa fa-inr" aria-hidden="true"></i> 189.00</p>
-        <button class="add-to-cart" data-product="Product 3" data-price="189.00">Add to Cart</button>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 189/-</p>
+        <button class="add-to-cart" data-product="HRx scokscarving" data-price="189/-">Add to Cart</button>
     </div>
    
 
@@ -160,8 +160,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p><i class="fa fa-inr" aria-hidden="true"></i> 1289.00</p>
-        <button class="add-to-cart" data-product="Product 3" data-price="1289.00">Add to Cart</button>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 1289/-</p>
+        <button class="add-to-cart" data-product="Fossil metal watch" data-price="1289/-">Add to Cart</button>
     </div> <br>
     <br>
    
@@ -176,8 +176,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p><i class="fa fa-inr" aria-hidden="true"></i> 877.00</p>
-        <button class="add-to-cart" data-product="Product 3" data-price="877.00">Add to Cart</button>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 877/-</p>
+        <button class="add-to-cart" data-product="Redmuster fashion watch" data-price="877/-">Add to Cart</button>
     </div>
 
 
@@ -191,8 +191,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p><i class="fa fa-inr" aria-hidden="true"></i>  769.00</p>
-        <button class="add-to-cart" data-product="Product 3" data-price="769.00">Add to Cart</button>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  769/-</p>
+        <button class="add-to-cart" data-product="X-sprak shoes" data-price="769/-">Add to Cart</button>
     </div>
 
 
@@ -207,8 +207,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p><i class="fa fa-inr" aria-hidden="true"></i>  220.00</p>
-        <button class="add-to-cart" data-product="Product 3" data-price="220.00">Add to Cart</button>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  220/-</p>
+        <button class="add-to-cart" data-product="Fashion cut shoes" data-price="220/-">Add to Cart</button>
     </div>
 
 
@@ -227,8 +227,8 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p><i class="fa fa-inr" aria-hidden="true"></i>  568.00</p> 
-        <button class="add-to-cart" data-product="Product 3" data-price="568.00">Add to Cart</button>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>  568/-</p> 
+        <button class="add-to-cart" data-product="vikto Fashion shorts" data-price="568/-">Add to Cart</button>
     </div>
 
 </div>
