--- a/product-details.html
+++ b/product-details.html
@@ -70,7 +70,7 @@
     <div class="col2">
         <p>Home / T-Shirt</p>
         <h1>Red printed T-Shirt by HRX</h1>
-        <h4>$50.00</h4>
+        <h4><i class="fa fa-inr" aria-hidden="true"></i>360/-</h4>
     </div>
     <br>
     <select  class="sizr">
@@ -106,7 +106,7 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$50.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>360/-</p>
     </div>
 
     <div class="small-cont">
@@ -119,7 +119,7 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$70.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i> 576/-</p>
     </div>
     <div class="small-cont">
         <img src="./images/product-3.jpg" alt=""> <br>
@@ -131,11 +131,11 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$120.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>436/-</p>
     </div>
     <div class="small-cont">
         <img src="./images/product-4.jpg" alt=""> <br>
-        <h4>darkbule printed T-shirt</h4>
+        <h4>darkbule T-shirt</h4>
         <div class="rating">
             <i class="fa fa-star" ></i>
             <i class="fa fa-star" ></i>
@@ -143,7 +143,7 @@
             <i class="fa fa-star"></i>
             <i class="fa fa-star-o"></i>
         </div>
-        <p>$90.00</p>
+        <p><i class="fa fa-inr" aria-hidden="true"></i>394/-</p>
     </div>
 
  
