--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@
 
 
     <div class="small-cont">
-        <a href="product-details.html" ><img src="./images/product-1.jpg" alt=""><br>
+        <img src="./images/product-1.jpg" alt=""><br>
         <h4>Red printed T-shirt</h4></a> 
         <div class="rating">
             <i class="fa fa-star" ></i>
